added logo and display curr tokens

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/sanitize-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Sanitize.gg, automated content moderating and censoring. AI tools to automatically edit and audit content"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/sanitize-logo.svg" />
+    <meta
+      name="twitter:title"
+      content="Sanitize.gg - Automated AI Content Moderation"
+    />
+    <meta name="twitter:creator" content="@sanitizeGG" />
+    <meta name="twitter:site" content="@sanitizeGG" />
+    <meta
+      name="twitter:description"
+      content="Content moderation platform for media. We use innovative AI technology to detect and censor any words or content that may violate the policies of your intended platform, saving you the hassle of manually censoring videos."
+    />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sanitize-logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
